blog work also done

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,14 +1,14 @@
 
 <!doctype html>
 <html lang="en">
-    {% load staticfiles%}
+{% load staticfiles %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>Manjunath Batakurki</title>
+    <title>Beyond the frames Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
@@ -46,53 +46,41 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'home' %}">Manjunath Batakurki</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav ml-auto">
-                <a class="nav-link " href="https://www.linkedin.com/in/manjunath-batakurki">LinkedIn</a>
-                <a class="nav-link" href="{% static 'manjunath_resume_24_08_2020.pdf'%}">Resume</a>
-                <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
-               
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{% url 'home' %}">Manjunath Batakurki</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-link " href="https://www.linkedin.com/in/manjunath-batakurki">LinkedIn</a>
+            <a class="nav-link" href="{% static 'manjunath_resume_24_08_2020.pdf'%}">Resume</a>
+            <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
+           
+          </div>
+        </div>
+      </nav>
 </header>
 
 <main role="main">
-
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1>Hi, I'm Manjunath Batakurki</h1>
-      <p class="lead text-muted">Hello all, I'm Manjunath. I m trying out making a new website using Django Framework. Loving the journey so far. Thrilled to handle requests in Django !!!</p>
-      <p>
-        <a href="mailto:manjunath-batakurki38@gmail.com" class="btn btn-primary my-2">Email Me</a>
-      </p>
-      <img src="{% static '32408446_1688834494535530_7794684812614172672_o.jpg' %}"  width="400" height="400"/>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-        {%  for job in jobs.all %}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="card-imp-top" src="{{ job.image.url }}" width="200" height="200" />
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
+<div class="container">
+  <h1 class="text-center pt-3">Welcome to Beyond the Frames</h1>
+  <br />
+  <br />
+  <h2>Latest Posts</h2>
+  <hr />
+  <div class="row">
+    {%  for blog in blogs.all %}
+      <div >
+          <a href="{%  url 'detail' blog.id %}"><h2>{{ blog.title }}</h2></a>
+          <h3>{{ blog.pub_date_pretty}}</h3>
+          <img class="img-fluid" src="{{ blog.image.url }}" height="200" width="200" />
+          <p>{{blog.summary}}</p>
       </div>
-    </div>
-  </div>
 
+    {% endfor %}
+  </div>
+</div>
 </main>
 
 <footer class="text-muted">
@@ -100,6 +88,7 @@
       <p>
           Copyright ©️ Manjunath Batakurki {% now "Y" %}
       </p>
+      
      </div>
 </footer>
 <!-- CSS only -->
